--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    width:1000px;
 }
 
 .status {
@@ -12,12 +13,19 @@
     border: 1px solid navy;
     padding:5px;
     margin:10px;
-
 }
 
 .status img {
     width: 150px;
     height: 150px;
+}
+
+h2 {
+    font-size: 40px;
+}
+
+h3 {
+    font-size: 30px;
 }
 
 button {
@@ -29,7 +37,7 @@ button {
 	border: 1px solid navy;
 	background-color: dodgerblue;
 	color: white;
-	width: 500px;
+	width: 900px;
 	height: 50px;
 	margin-bottom: 10px;
 }
